After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 639380 - Critical warnings when detaching tab
Critical warnings when detaching tab
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Class: GtkStyleContext
2.99.x
Other Linux
: Normal normal
: ---
Assigned To: Carlos Garnacho
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2011-01-12 23:14 UTC by Paolo Borelli
Modified: 2011-01-15 02:17 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Paolo Borelli 2011-01-12 23:14:03 UTC
(lt-testnotebookdnd:6217): Gtk-CRITICAL **: gtk_render_frame_gap: assertion `xy0_gap < xy1_gap' failed