Avoid a critical warning during tab DND

https://bugzilla.gnome.org/show_bug.cgi?id=639380